--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@ if ($short or $accession) {
   $query_statement = qq"SELECT * FROM genome WHERE accession = ?";
   $entries = $db->MySelect(statement => $query_statement, type => 'hash', descriptor => 1, vars =>[$accession]);
 } else {
-  $query_statement = qq"SELECT * FROM genome WHERE ";
+  $query_statement = qq"SELECT * FROM gene_info WHERE ";
   if ($search_species_limit ne 'all') {
     $query_statement .= qq"species = '$search_species_limit' AND ";
 #  } elsif ($search_species_limit ne 'all') {
