very small search changes

--- a/search.html
+++ b/search.html
@@ -159,7 +159,7 @@ Search the <select name="location">
   $short => 0
   $accession => undef
   $query => undef
-  $search_species_limit => undef
+  $search_species_limit => 'all'
   $blastsearch => undef
   $translate => undef
 </%args>
