--- a/help.html
+++ b/help.html
@@ -1,131 +1,116 @@
-<p>
-
+ </td>
+ <td width="70%">
+ <p>
  <font size="+2">Topics</font>
  <ul>
  <li>
-  The PRFdb <a href="http://prfdb.umd.edu/index.cgi/help_pipeline">pipeline</a>.
+  The PRFdb <a href="[% base %]/help_pipeline">pipeline</a>.
  </li>
 
  <li>
-  The <a href="http://prfdb.umd.edu/index.cgi/help_main">main page</a>.
+  The <a href="[% base %]/help_main">main page</a>.
  </li>
 
  <li>
-  <a href="http://prfdb.umd.edu/index.cgi/help_search">Search interface</a>.
+  <a href="[% base %]/help_search">Search interface</a>.
  </li>
 
  <li>
-  Looking at a <a href="http://prfdb.umd.edu/index.cgi/help_genome">single gene</a>.
+  Looking at a <a href="[% base %]/help_genome">single gene</a>.
  </li>
   <ul>
-
    <li>
-  <a href="http://prfdb.umd.edu/index.cgi/help_genome#example">An Example Gene</a>.
+  <a href="[% base %]/help_genome#example">An Example Gene</a>.
    </li>
   </ul>
   <ul>
    <li>
-    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_genename">Gene name</a>
-   </li>
-
-   <li>
-    <a href="http://prfdb.umd.edu/index.cgi/help_comments#help_comments">Comments</a>
+    <a href="[% base %]/help_genome#help_genename">Gene name</a>
    </li>
    <li>
-    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_linkout">Links out</a>
+    <a href="[% base %]/help_comments#help_comments">Comments</a>
    </li>
    <li>
-    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_position">Position</a>
-
+    <a href="[% base %]/help_genome#help_linkout">Links out</a>
    </li>
    <li>
-    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_slipsite">Slippery Site</a>
+    <a href="[% base %]/help_genome#help_position">Position</a>
    </li>
    <li>
-    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_folds">Number of folds</a>
+    <a href="[% base %]/help_genome#help_slipsite">Slippery Site</a>
    </li>
    <li>
-
-    <a href="http://prfdb.umd.edu/index.cgi/help_genome#help_codons">Highlighted Codons</a>
+    <a href="[% base %]/help_genome#help_folds">Number of folds</a>
+   </li>
+   <li>
+    <a href="[% base %]/help_genome#help_codons">Highlighted Codons</a>
    </li>
   </ul>
 
  <li>
-  Looking at a <a href="http://prfdb.umd.edu/index.cgi/help_detail">single PRF signal</a>.
+  Looking at a <a href="[% base %]/help_detail">single PRF signal</a>.
   <ul>
     <li>
-
-   <a href="http://prfdb.umd.edu/index.cgi/help_detail#example">Example PRF Signal</a>.
+   <a href="[% base %]/help_detail#example">Example PRF Signal</a>.
     </li>
    </ul>
    <ul>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_accession">Accession</a>
+     <a href="[% base %]/help_detail#help_accession">Accession</a>
     </li>
     <li>
-
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_position">Position</a>
+     <a href="[% base %]/help_detail#help_position">Position</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_algorithm">Algorithm</a>
+     <a href="[% base %]/help_detail#help_algorithm">Algorithm</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_barcode">Barcode</a>
-
+     <a href="[% base %]/help_detail#help_barcode">Barcode</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_seqlength">Sequence Length</a>
+     <a href="[% base %]/help_detail#help_seqlength">Sequence Length</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_slipsite">Slippery Site</a>
+     <a href="[% base %]/help_detail#help_slipsite">Slippery Site</a>
     </li>
     <li>
-
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_bp">Base Pairs</a>
+     <a href="[% base %]/help_detail#help_bp">Base Pairs</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_mfe">Minimum Free Energy</a>
+     <a href="[% base %]/help_detail#help_mfe">Minimum Free Energy</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_z">Z score</a>
-
+     <a href="[% base %]/help_detail#help_z">Z score</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_rand_mfe">Randomized mean MFE</a>
+     <a href="[% base %]/help_detail#help_rand_mfe">Randomized mean MFE</a>
     </li>
     <li>
-     <a href="http://prfdb.umd.edu/index.cgi/help_detail#help_ppcc">Probability Plot Correlation Coefficient</a>
+     <a href="[% base %]/help_detail#help_ppcc">Probability Plot Correlation Coefficient</a>
     </li>
    </ul>
-
   </li>
  
  <li>
-  <a href="http://prfdb.umd.edu/index.cgi/help_import">Importing Sequences</a>.
+  <a href="[% base %]/help_import">Importing Sequences</a>.
  </li>
 
  <li>
-  <a href="http://prfdb.umd.edu/index.cgi/help_filter">Filtering the PRFdb</a>.
+  <a href="[% base %]/help_filter">Filtering the PRFdb</a>.
  </li>
 
  <li>
-
-  <a href="http://prfdb.umd.edu/index.cgi/help_download">Downloading information</a>.
+  <a href="[% base %]/help_download">Downloading information</a>.
  </li>
 
  <li>
-  The <a href="http://prfdb.umd.edu/index.cgi/help_cloud">cloud</a>.
+  The <a href="[% base %]/help_cloud">cloud</a>.
  </li>
 
  <li>
-  Using <a href="http://prfdb.umd.edu/index.cgi/help_blast">BLAST</a> in the PRFdb.
+  Using <a href="[% base %]/help_blast">BLAST</a> in the PRFdb.
  </li>
 
  <li>
-  The <a href="http://prfdb.umd.edu/index.cgi/help_landscape">landscape</a>.
- </li></form>   </tr>
-
-<%init>
-</%init>
-<%args>
-</%args>
+  The <a href="[% base %]/help_landscape">landscape</a>.
+ </li>
