--- a/help/help.html
+++ b/help/help.html
@@ -4,113 +4,113 @@
  <font size="+2">Topics</font>
  <ul>
  <li>
-  The PRFdb <a href="[% base %]/help_pipeline">pipeline</a>.
+  The PRFdb <a href="/help/pipeline.html">pipeline</a>.
  </li>
 
  <li>
-  The <a href="[% base %]/help_main">main page</a>.
+  The <a href="/help/main.html">main page</a>.
  </li>
 
  <li>
-  <a href="[% base %]/help_search">Search interface</a>.
+  <a href="/help/search.html">Search interface</a>.
  </li>
 
  <li>
-  Looking at a <a href="[% base %]/help_genome">single gene</a>.
+  Looking at a <a href="/help/genome.html">single gene</a>.
  </li>
   <ul>
    <li>
-  <a href="[% base %]/help_genome#example">An Example Gene</a>.
+  <a href="/help/genome.html#example">An Example Gene</a>.
    </li>
   </ul>
   <ul>
    <li>
-    <a href="[% base %]/help_genome#help_genename">Gene name</a>
+    <a href="/help/genome.html#help_genename">Gene name</a>
    </li>
    <li>
-    <a href="[% base %]/help_comments#help_comments">Comments</a>
+    <a href="/help/comments.html#help_comments">Comments</a>
    </li>
    <li>
-    <a href="[% base %]/help_genome#help_linkout">Links out</a>
+    <a href="/help/genome.html#help_linkout">Links out</a>
    </li>
    <li>
-    <a href="[% base %]/help_genome#help_position">Position</a>
+    <a href="/help/genome.html#help_position">Position</a>
    </li>
    <li>
-    <a href="[% base %]/help_genome#help_slipsite">Slippery Site</a>
+    <a href="/help/genome.html#help_slipsite">Slippery Site</a>
    </li>
    <li>
-    <a href="[% base %]/help_genome#help_folds">Number of folds</a>
+    <a href="/help/genome.html#help_folds">Number of folds</a>
    </li>
    <li>
-    <a href="[% base %]/help_genome#help_codons">Highlighted Codons</a>
+    <a href="/help/genome.html#help_codons">Highlighted Codons</a>
    </li>
   </ul>
 
  <li>
-  Looking at a <a href="[% base %]/help_detail">single PRF signal</a>.
+  Looking at a <a href="/help/detail.html">single PRF signal</a>.
   <ul>
     <li>
-   <a href="[% base %]/help_detail#example">Example PRF Signal</a>.
+   <a href="/help/detail.html#example">Example PRF Signal</a>.
     </li>
    </ul>
    <ul>
     <li>
-     <a href="[% base %]/help_detail#help_accession">Accession</a>
+     <a href="/help/detail.html#help_accession">Accession</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_position">Position</a>
+     <a href="/help/detail.html#help_position">Position</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_algorithm">Algorithm</a>
+     <a href="/help/detail.html#help_algorithm">Algorithm</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_barcode">Barcode</a>
+     <a href="/help/detail.html#help_barcode">Barcode</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_seqlength">Sequence Length</a>
+     <a href="/help/detail.html#help_seqlength">Sequence Length</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_slipsite">Slippery Site</a>
+     <a href="/help/detail.html#help_slipsite">Slippery Site</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_bp">Base Pairs</a>
+     <a href="/help/detail.html#help_bp">Base Pairs</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_mfe">Minimum Free Energy</a>
+     <a href="/help/detail.html#help_mfe">Minimum Free Energy</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_z">Z score</a>
+     <a href="/help/detail.html#help_z">Z score</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_rand_mfe">Randomized mean MFE</a>
+     <a href="/help/detail.html#help_rand_mfe">Randomized mean MFE</a>
     </li>
     <li>
-     <a href="[% base %]/help_detail#help_ppcc">Probability Plot Correlation Coefficient</a>
+     <a href="/help/detail.html#help_ppcc">Probability Plot Correlation Coefficient</a>
     </li>
    </ul>
   </li>
  
  <li>
-  <a href="[% base %]/help_import">Importing Sequences</a>.
+  <a href="/help/import.html">Importing Sequences</a>.
  </li>
 
  <li>
-  <a href="[% base %]/help_filter">Filtering the PRFdb</a>.
+  <a href="/help/filter.html">Filtering the PRFdb</a>.
  </li>
 
  <li>
-  <a href="[% base %]/help_download">Downloading information</a>.
+  <a href="/help/download.html">Downloading information</a>.
  </li>
 
  <li>
-  The <a href="[% base %]/help_cloud">cloud</a>.
+  The <a href="/help/cloud.html">cloud</a>.
  </li>
 
  <li>
-  Using <a href="[% base %]/help_blast">BLAST</a> in the PRFdb.
+  Using <a href="/help/blast.html">BLAST</a> in the PRFdb.
  </li>
 
  <li>
-  The <a href="[% base %]/help_landscape">landscape</a>.
+  The <a href="/help/landscape.html">landscape</a>.
  </li>
