--- a/graphs.html
+++ b/graphs.html
@@ -5,24 +5,24 @@ of each slippery site.  PRF signals which start with 'AAA' are red, 'UUU' are
 green, 'GGG' are blue, and 'CCC' are black.
 </p>
 <center>
-% if (!-f "$config->{base}/images/cloud/$species/cloud-all-bar.png") {
+% if (!-f "$config->{base}/images/cloud/$species/cloud-bar.png") {
 Generating new bar graphs now.
 <& generate_bar_graphs.html, species => $species &>
 % } 
- <img src="images/cloud/<% $species %>/cloud-all-bar.png">
+ <img src="images/cloud/<% $species %>/cloud-bar.png">
 </center>
 <p>
 Below is a bar graph showing how many of these have values less than the mean
 MFE and zscore.
 </p>
 <center>
- <img src="images/cloud/<% $species %>/cloud-all-bar-sig.png">
+ <img src="images/cloud/<% $species %>/cloud-bar-sig.png">
 </center>
 <p>
 And percentage.
 </p>
 <center>
- <img src="images/cloud/<% $species %>/cloud-all-bar-percentsig.png">
+ <img src="images/cloud/<% $species %>/cloud-bar-percentsig.png">
 </center>
 <p>
 Below is a chart of extended reading frames, x axis percentage ORF, y axis percentage extended.
